--- a/ui/src/blogs/7/index.mdx
+++ b/ui/src/blogs/7/index.mdx
@@ -24,6 +24,7 @@ For some basic terminology we can look at docs from AWS  - <Link href={vpcConcep
 
 ---
 
+Concepts to cover cognitive load, how wide does your T need to be , Team Topologies
 
 Using GitHub Actions to continuously build and deploy a serverless blog site using Terraform, React, GraphQL, and several AWS services including Lambda, API Gateway, S3, SNS, Route53, Certificate Manager and CloudFront it is relatively "simple" for one person to build an end to end globally deployed, highly scalable web application.
 
@@ -42,11 +43,11 @@ This is where the maddening complexity rears its ugly head and where the competi
 
 <br/>
 
-The contrast to this approach, but equally as futile, is when one team (usually really smart and capable) is given complete independence and heads off into the wilderness to DevOps a trail for the rest of the organization to follow which of course will be so brilliantly conceived and implemented that all who come upon it will need only to git clone to be instantly bathed in the productivity healing light of automation.  What normally happens is the brilliance of their solution collapses under the weight of confusion of the people trying to follow them and some other team goes and implements the same thing on whatever cloud provider the original team isn't using because the original solution was "dumb".
+The contrast to this approach, but equally as futile, is when one team (usually really smart and capable) is given complete independence and heads off into the wilderness to DevOps a trail for the rest of the organization to follow which of course will be so brilliantly conceived and implemented that all who come upon it will need only to git clone to be instantly bathed in the productivity healing light of automation.  What normally happens is the brilliance of their solution collapses under the weight of confusion of the people trying to follow them and some other team goes and implements the same thing on whatever cloud provider the original team isn't using because the original solution was too hard to understand.
 
 <br/>
 
-So it seems that organizations are caught between the rock of moving to quickly and having a solution that is poorly suited to scale and the hard place of moving to slowly in developing a solution that can scale.
+So it seems that organizations are caught between the rock of moving to quickly and having a solution that is poorly suited to scale, and the hard place of moving to slowly in developing a solution that can scale.
 
 <br/>
 
