--- a/ui/src/blogs/6/index.mdx
+++ b/ui/src/blogs/6/index.mdx
@@ -8,8 +8,7 @@ import {
     Link
 } from 'rebass';
 
-
-
+import {Helmet} from "react-helmet";
 
 export const staticSiteSetup = "https://docs.aws.amazon.com/AmazonS3/latest/userguide/HostingWebsiteOnS3Setup.html"
 
@@ -27,7 +26,25 @@ export const prodBuild = "https://create-react-app.dev/docs/production-build"
 
 export const gaTerraform = "https://github.com/hashicorp/setup-terraform"
 
+<!--  https://webcode.tools/generators/open-graph/article -->
 
+<Helmet>
+<meta property="og:type" content="article"/>
+<meta property="og:title" content="Serverless Web Application Deployement on AWS"/>
+<meta property="og:url" content="https://arthurdayton.com/post/6/"/>
+<meta property="og:image" content="%PUBLIC_URL%/AWS_serverless_web_app.png"/>
+<meta property="og:description" content="This post shows the code for deploying a serverless application to AWS using Terraform, React, GraphQL and GitHub Actions."/>
+<meta property="article:author" content="Arthur Dayton"/>
+<meta property="article:published_time" content="2022-02-16"/>
+<meta property="article:tag" content="Terraform"/>
+<meta property="article:tag" content="AWS"/>
+<meta property="article:tag" content="React"/>
+<meta property="article:tag" content="Cloudfront"/>
+<meta property="article:tag" content="Route53"/>
+<meta property="article:tag" content="GraphQL"/>
+<meta property="article:tag" content="ACM"/>
+<meta property="article:tag" content="GitHub Actions"/>
+</Helmet>
 
 #### Using GitHub Actions to continuously deploy a Serverless blog site
 
