add more meta tags to about blog

--- a/ui/src/blogs/6/index.mdx
+++ b/ui/src/blogs/6/index.mdx
@@ -35,7 +35,7 @@ export const gaTerraform = "https://github.com/hashicorp/setup-terraform"
 <meta property="og:image" content="%PUBLIC_URL%/AWS_serverless_web_app.png"/>
 <meta property="og:description" content="This post shows the code for deploying a serverless application to AWS using Terraform, React, GraphQL and GitHub Actions."/>
 <meta property="article:author" content="Arthur Dayton"/>
-<meta property="article:published_time" content="2022-02-16"/>
+<meta property="article:published_date" content="2022-02-16"/>
 <meta property="article:tag" content="Terraform"/>
 <meta property="article:tag" content="AWS"/>
 <meta property="article:tag" content="React"/>
